# obs-companion-bridge

./: CMakeLists.txt  README.md  buildspec.json
src/: companion-bridge.cpp  companion-bridge.hpp  http-server.hpp  mdns-advertiser.hpp  obs-websocket-api.h  plugin-main.cpp  plugin-main.hpp
